--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,6 +22,11 @@
         />
         <p>@andreia.mlima</p>
       </div>
+      <div id="switch">
+        <button></button>
+        <span></span>
+      </div>
+
       <ul>
         <li>
           <a href="#">Linkedin</a>
@@ -37,18 +42,18 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href=""target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href=""target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href=""target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href=""target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
-        </a>        
+        </a>
       </div>
     </div>
     <script
