--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         />
         <p>@andreia.mlima</p>
       </div>
-      <div id="switch">
+      <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
       </div>
@@ -64,5 +64,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
