--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevLinks</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
           src="./assets/avatar.png"
           alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
         />
-        <p>@maykbrito</p>
+        <p>@andreia.mlima</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -49,19 +49,19 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/maykbrito" target="_blank">
+        <!--<a href="https://instagram.com/maykbrito" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
-        </a>
+        </a>-->
 
-        <a href="https://youtube.com/maykbrito" target="_blank">
+        <!--<a href="https://youtube.com/maykbrito" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
-        </a>
+        </a>-->
 
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
